fixed video position on Tablet 1199px

--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -1,31 +1,54 @@
 .gym {
   position: relative;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   color: $secondaryColor;
   margin: 120px 7.6% 217px;
 
-  @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
+  @media (max-width: $mobile-width-only) {
+    display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 100px 5.8% 178px;
+  }
+
+  .gym__info-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    @media (max-width: $mobile-width-only) {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
+  @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
+    margin: 100px 5.8% 184px;
   }
 
   @media (max-width: $mobile-width-only) {
-    flex-direction: column;
-    align-items: center;
     margin: 70px 0;
   }
 
   picture, img {
-    width: 660px;
+    width: 100%;
     height: 401px;
 
     @media (max-width: $tablet-width-only) {
       height: auto;
       width: 100%;
     }
+  }
+
+  img {
+    object-fit: cover;
+  }
+
+  picture {
+    display: flex;
   }
 }
 
@@ -103,26 +126,27 @@
 }
 
 .gym__video {
-  height: 100%;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
-  margin: 97px 0 0 39px;
   position: absolute;
+  width: 100%;
 
-  @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
-    margin: 83px 0 0 0;
+  @media (min-width: $desktop-width) {
+    bottom: -97px;
+    margin-left: 39px;
   }
 
-  @media (min-width: $tablet-width) {
-    width: 100%;
+  @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
+    bottom: -83px;
   }
 
   @media (max-width: $mobile-width-only) {
     display: block;
     position: relative;
     width: 100%;
-    margin: 40px -5.2% 0 -5.2%;
+    max-width: 420px;
+    margin: 40px 0 0 0;
   }
 
   .gym__video-overlay {
@@ -135,10 +159,6 @@
     @media (max-width: $mobile-width-only) {
       height: 100%
     }
-  }
-
-  picture {
-    display: flex;
   }
 }
 
@@ -182,19 +202,13 @@
 
 .gym__gym-pic {
   background-color: #b6bdcc;
-  height: 401px;
+  height: fit-content;
 
   @media (max-width: $tablet-width-only) {
     width: 100%;
-    height: 345px;
   }
 
   @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
     margin-top: 43px;
-  }
-
-  @media (max-width: $mobile-width-only) {
-    margin: 0 -5.2%;
-    height: 313px;
   }
 }
